--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<html lang="en">
 <head>
+  <html lang="en"></html>
   <meta charset="utf-8">
   <title>QuienSoy?</title>
   <base href="/">
